# JobNimbus_controller

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FIELD_RUNBOOK.md  LICENSE  Procfile  README.md  cloudflared_log.txt  discover_jn_schema.py  dump.rdb  e2e_fail.txt  entrypoint.sh  field_mapping.json  generate_samples.py  jobnimbus_AI_controller_specs.md  launch_v4.bat  pyproject.toml  render.yaml  requirements.txt  run_phase4.py  security_tasks.md  setup_network.ps1  start_dev.ps1  start_prod.ps1  start_production.ps1  truck_server.db
app/: __init__.py  config.py  main.py
building_codes/: ga_amendments.txt  irc_chapter_9.txt
data/: jobnimbus.db-shm  jobnimbus.db-wal  jobnimbus_dev.db  jobnimbus_dev.db-shm  jobnimbus_dev.db-wal
legacy_jobnimbus/: jobnimbus_client.py  test_jobnimbus_client.py
scratch/: fix_syntax.py  update_field_routes.py  update_office_routes.py  update_routes_rate_limit.py
scripts/: analyze_logs.py  bootstrap_demo.py  debug_p8.py  demo_reset.py  fix_quotes.py  fix_update_rep_rollback.py  generate_samples.py  install_google_drive.ps1  patch_database_phase9.py  patch_graceful_db.py  patch_p8_fixture.py  patch_test_field_routes.py  pre_flight.py  recover_job.py  refactor_task1.py  refactor_task1_part2.py  refactor_task2.py
tests/: conftest.py  test_ai_service.py  test_cache.py  test_cleanup.py  test_climate_gate.py  test_code_router.py  test_complexity.py  test_database.py  test_e2e_pipeline.py  test_field_mapper.py  test_field_routes.py  test_happy_path.py  test_ingestion.py  test_inspection_engine.py  test_inspection_models.py  test_job_costing.py  test_job_processor.py  test_jobnimbus_client.py  (+23 more)
(+118 files in other folders)
