[project]
name = "wickham-roofing-crm"
version = "0.7.0"
description = "Local CRM and automated estimating engine."
authors = [{name = "Wickham Roofing LLC"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "google-genai>=1.0.0",
    "reportlab>=4.0.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "Pillow>=10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = false

[[tool.mypy.overrides]]
module = [
    "app.core.pipeline",
    "app.core.job_costing",
    "app.core.database",
    "app.services.qbo_export"
]
disallow_untyped_defs = true
